--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:14
-    container_name: movie_rental_db
+    container_name: rentamovie_db
+    restart: always
     environment:
-      POSTGRES_DB: movie_rental
+      POSTGRES_DB: rentamovie
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
